[package]
name = "firepilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
log = "0.4.17"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
hyper = "0.14.24"
hyperlocal = "0.8"
