[package]
name = "firepilot"
description = "Interface to work with Firecracker microVMs"
homepage = "https://github.com/rik-org/firepilot"
repository = "https://github.com/rik-org/firepilot"
documentation = "https://docs.rs/firepilot"
readme = "../README.md"
version = "1.1.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
keywords = ["firecracker", "microvm", "IPC"]
categories = ["os::linux-apis", "virtualization"]

[dependencies]
thiserror = "1.0.38"
log = "0.4.17"
serde_json = "1.0.91"
serde = { version = "1.0.160" }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"] }
hyper = "0.14.24"
hyperlocal = "0.8"
serde_derive = "1.0.160"
url = "^2.2"
tokio = { version = "1.27.0", features = ["process", "rt", "macros"], default-features = false }
firepilot_models = "1.3.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.4.0"
pretty_assertions = "1.3.0"
reqwest = "0.11.15"
doc-comment = "0.3.3"
serial_test = "2.0.0"
tracing-subscriber = "0.3"